* changing `infra.` to `libx.` + style to `overrides` `.hide-validation-error .md-errors-spacer`

--- a/src/styles/style.overrides.less
+++ b/src/styles/style.overrides.less
@@ -65,3 +65,5 @@ md-input-container.negative.md-default-theme:not(.md-input-invalid).md-input-has
 :focus { outline: none; }
 a:focus { text-decoration:underline; }
 .md-icons { vertical-align:middle; bottom:0px; position:relative; }
+
+.hide-validation-error .md-errors-spacer { display: none; }
