--- a/src/styles/style.overrides.less
+++ b/src/styles/style.overrides.less
@@ -57,6 +57,8 @@ md-input-container.negative {
 }
 md-input-container.negative.md-default-theme:not(.md-input-invalid).md-input-has-value label, md-input-container:not(.md-input-invalid).md-input-has-value label { color:@fg-myAction; }
 
+
+// .md-button { min-width: 36px; }
 .md-button.md-fab .md-icons.huge { position:relative; }
 .md-button .md-icons { top:0px; position:relative; }
 
