--- a/src/styles/style.helper.less
+++ b/src/styles/style.helper.less
@@ -103,7 +103,7 @@ img.no-resize { max-width:none; max-height:none; height: inherit; }
 .corners-left20 { .corners-left(20px) }
 
 .margin-auto { margin-left:auto; margin-right:auto; }
-.margin0 { margin:0; }
+.margin0 { margin:0 !important; }
 .margin-v0 { margin-top:0; margin-bottom:0; }
 .margin-h0 { margin-left:0; margin-right:0; }
 .margin-bottom0 { margin-bottom:0px; }
