- removing anchor underline of focus

--- a/src/styles/style.overrides.less
+++ b/src/styles/style.overrides.less
@@ -65,7 +65,7 @@ md-input-container.negative.md-default-theme:not(.md-input-invalid).md-input-has
 .md-display-1, .md-display-2, .md-display-3, .md-display-4, .md-subhead { margin-bottom: 10px; }
 
 :focus { outline: none; }
-a:focus { text-decoration:underline; }
+a:focus { text-decoration:none; }
 .md-icons { vertical-align:middle; bottom:0px; position:relative; }
 
 .hide-validation-error .md-errors-spacer { display: none; }
