* making all elements with ng-click be with pointer ^

--- a/src/styles/style.overrides.less
+++ b/src/styles/style.overrides.less
@@ -14,6 +14,8 @@
 hr { border: 0; height:1px; width:100%; background-color:fade(#88b9e3, 40%); }
 * { border-collapse: collapse; } 
 
+*[ng-click] { cursor:pointer; }
+
 //.md-button.md-default-theme:not([disabled]):hover, .md-button:not([disabled]):hover { background-color: #222; opacity: .9; color:white !important; }
 md-sidenav.md-default-theme, md-sidenav, md-sidenav.md-default-theme md-content, md-sidenav md-content { background-color:initial; }
 .layout-margin, .layout-margin-gt-sm, .layout-margin-md, .layout-margin>*, .layout-margin-gt-sm>*, .layout-margin-md>*, .layout-margin>.flex, .layout-margin>.flex-gt-sm, .layout-margin>.flex-md { margin:0; }
@@ -69,3 +71,4 @@ a:focus { text-decoration:none; }
 .md-icons { vertical-align:middle; bottom:0px; position:relative; }
 
 .hide-validation-error .md-errors-spacer { display: none; }
+
