--- a/src/styles/style.overrides.less
+++ b/src/styles/style.overrides.less
@@ -72,3 +72,6 @@ a:focus { text-decoration:none; }
 
 .hide-validation-error .md-errors-spacer { display: none; }
 
+pre { white-space:pre-wrap; white-space:-moz-pre-wrap; white-space:-pre-wrap; white-space:-o-pre-wrap; word-wrap:break-word; }
+.md-button.md-icon, .md-button.btn-icon { min-width: 36px; }
+
