+ Integrating events and broadcasting * Fixing .middled

--- a/src/styles/style.helper.less
+++ b/src/styles/style.helper.less
@@ -234,7 +234,8 @@ img.no-resize { max-width:none; max-height:none; height: inherit; }
 .my-card-content { padding:20px 20px; }
 
 // .middled { display:table;  width:100%; }
-.middled > * { vertical-align:middle; } // text-align:center; display:table-cell; 
+.middled, .middled > * { vertical-align:middle; }
+// text-align:center; display:table-cell; 
 
 
 .bg-grd { background-image: linear-gradient(267deg,#7c47ab,#6fbbe1); }
