+ couple useful css stlyes

--- a/src/styles/style.helper.less
+++ b/src/styles/style.helper.less
@@ -67,11 +67,16 @@ img.no-resize { max-width:none; max-height:none; height: inherit; }
 
 .btn { border-radius:10px; font-size:17px; font-weight:900; text-transform: none; height:36px; }
 
+.right0 { right:0; }
+.left0 { left:0; }
 .hide { opacity:0; display: initial !important; }
 .hidden { height:0; overflow:hidden; }
 .remove { display:none;; }
+.absolute { position:absolute; }
 .relative { position:relative; }
 .sticky { position:fixed; }
+.top { z-index:1; }
+.top-most { z-index:999999; }
 .error { .fg-red; .bold; } 
 .warn { .fg-yellow; .bold; } 
 
