--- a/src/styles/style.components.less
+++ b/src/styles/style.components.less
@@ -31,17 +31,19 @@
 .search__input:focus+.search_icons .search__submit:before, .search__input:focus+.search_icons .search__submit:after, .search__input:active+.search_icons .search__submit:before, .search__input:active+.search_icons .search__submit:after { color:rgba(160,160,160,0.7); }
 
 // Loader
-svg { display:block; margin:0; padding:0; }
-.spinner { width:66px; height:66px; animation:contanim 2s linear infinite; }
-svg { width:100%; height:100%; left:0; top:0; position:absolute; transform:rotate(-90deg); }
-svg:nth-child(1) circle { stroke:#84EBBD; stroke-dasharray:1, 300; stroke-dashoffset:0; animation:strokeanim 3s calc(.2s * (1)) ease infinite; transform-origin:center center; }
-svg:nth-child(2) circle { stroke:#4977EC; stroke-dasharray:1, 300; stroke-dashoffset:0; animation:strokeanim 3s calc(.2s * (2)) ease infinite; transform-origin:center center; }
-svg:nth-child(3) circle { stroke:#F6BB67; stroke-dasharray:1, 300; stroke-dashoffset:0; animation:strokeanim 3s calc(.2s * (3)) ease infinite; transform-origin:center center; }
-svg:nth-child(4) circle { stroke:#333841; stroke-dasharray:1, 300; stroke-dashoffset:0; animation:strokeanim 3s calc(.2s * (4)) ease infinite; transform-origin:center center; }
-@keyframes strokeanim { 0% { stroke-dasharray:1, 300; stroke-dashoffset:0; }
-	50% { stroke-dasharray:120, 300; stroke-dashoffset:-58.548324585; }
-	100% { stroke-dasharray:120, 300; stroke-dashoffset:-175.6449737549; }
-	} @keyframes contanim { 100% { transform:rotate(360deg); }
+.spinner { 
+	width:66px; height:66px; animation:contanim 2s linear infinite; 
+	svg { display:block; margin:0; padding:0; }
+	svg { width:100%; height:100%; left:0; top:0; position:absolute; transform:rotate(-90deg); }
+	svg:nth-child(1) circle { stroke:#84EBBD; stroke-dasharray:1, 300; stroke-dashoffset:0; animation:strokeanim 3s calc(.2s * (1)) ease infinite; transform-origin:center center; }
+	svg:nth-child(2) circle { stroke:#4977EC; stroke-dasharray:1, 300; stroke-dashoffset:0; animation:strokeanim 3s calc(.2s * (2)) ease infinite; transform-origin:center center; }
+	svg:nth-child(3) circle { stroke:#F6BB67; stroke-dasharray:1, 300; stroke-dashoffset:0; animation:strokeanim 3s calc(.2s * (3)) ease infinite; transform-origin:center center; }
+	svg:nth-child(4) circle { stroke:#333841; stroke-dasharray:1, 300; stroke-dashoffset:0; animation:strokeanim 3s calc(.2s * (4)) ease infinite; transform-origin:center center; }
+	@keyframes strokeanim { 0% { stroke-dasharray:1, 300; stroke-dashoffset:0; }
+		50% { stroke-dasharray:120, 300; stroke-dashoffset:-58.548324585; }
+		100% { stroke-dasharray:120, 300; stroke-dashoffset:-175.6449737549; }
+		} @keyframes contanim { 100% { transform:rotate(360deg); }
+	}
 }
 
 // Loader-Dual
