+ md-toast fix and support positioning in the middle

--- a/src/styles/style.overrides.less
+++ b/src/styles/style.overrides.less
@@ -75,3 +75,12 @@ a:focus { text-decoration:none; }
 pre { white-space:pre-wrap; white-space:-moz-pre-wrap; white-space:-pre-wrap; white-space:-o-pre-wrap; word-wrap:break-word; }
 .md-button.md-icon, .md-button.btn-icon { min-width: 36px; }
 
+md-toast { position:fixed; }
+md-toast.md-center {
+	margin-left: auto;
+	margin-right: auto;
+	left: 50%;
+	right: auto;
+	transform: translateX(-50%);
+	padding: 0px;
+}
