* avoid using `appEvents` if it's not present (in case it's dependency `rxjs` not registered) * fix secret key - remove input autofill with yellow bg

--- a/src/styles/style.overrides.less
+++ b/src/styles/style.overrides.less
@@ -23,7 +23,7 @@ md-sidenav.md-default-theme, md-sidenav, md-sidenav.md-default-theme md-content,
 md-input-container { min-height: 30px; }
 
 input[type=text] { -webkit-appearance: none; -moz-appearance: none; appearance: none; }
-input:-webkit-autofill { -webkit-box-shadow: 0 0 0 120px #FFF inset; -webkit-text-fill-color: @myColor !important; }
+// input:-webkit-autofill { -webkit-box-shadow: 0 0 0 120px #FFF inset; } //-webkit-text-fill-color: @myColor !important; }
 textarea:focus, input:focus { outline: none; }
 md-chips-wrap:focus { outline: none; }
 
