--- a/src/styles/style.helper.less
+++ b/src/styles/style.helper.less
@@ -304,6 +304,33 @@ i[class^=icon]{font-style:normal !important; }
 
 // -----------
 
+.grayed { color:#BDBDBD; }
+.inline { display:inline !important; }
+
+.v-middled { display:flex; flex-direction:column; place-content:center; }
+.v-middled-row { display:flex; flex-direction:row; place-content:center; }
+.h-middled { display:flex; align-items:center; text-align:center; line-height:0px; }
+.h-middled-col { display:flex; flex-direction:column; align-items:center; text-align:center; line-height:0px; }
+.v-align { vertical-align:middle; }
+.center-v { display: flex; align-items: center; text-align: center; flex-direction: column; }
+.fill-v { min-height:calc(~"100%"); }
+.fill-v-header { min-height:calc(~"100vh - 120px"); }
+.box-shadow { box-shadow: 0px 2px 13px rgba(0, 0, 0, 0.25); transition:box-shadow 0.2s ease-in; }
+.box-shadow-x2 { box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.27) !important; }
+.box-shadow-x3 { box-shadow: 0px 16px 7px rgba(0, 0, 0, 0.29) !important; }
+// .box-shadow:hover, .box-shadow-x2:hover, .box-shadow-x3:hover { box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.40) !important; }
+.text-truncate { text-overflow: ellipsis; white-space: nowrap; overflow: hidden; }
+
+.clearfix:before,
+.clearfix:after { content: "."; display: block; height: 0; overflow: hidden; }
+.clearfix:after { clear: both; }
+.clearfix { zoom: 1; } /* IE < 8 */
+
+.preserve-lines { white-space:pre-wrap; };
+.capitalize { text-transform: capitalize; }
+
+// -----------
+
 @media screen and (max-width: 599px){ /* xs */
 	.padding { .padding20 !important; }
 	.my-card { width:auto; }
