--- a/src/styles/style.overrides.less
+++ b/src/styles/style.overrides.less
@@ -75,12 +75,22 @@ a:focus { text-decoration:none; }
 pre { white-space:pre-wrap; white-space:-moz-pre-wrap; white-space:-pre-wrap; white-space:-o-pre-wrap; word-wrap:break-word; }
 .md-button.md-icon, .md-button.btn-icon { min-width: 36px; }
 
+input { display:inline-block; color:@dark; background-color:#BDBDBD; border:none; cursor:pointer; outline:none; -webkit-border-radius:4px; -moz-border-radius:4px; border-radius:4px; -webkit-transition:all .1s linear; -moz-transition:all .1s linear; transition:all .1s linear; }
+input[disabled] { opacity:0.2; }
+input:hover, textarea:hover { background-color:fade(#BDBDBD, 20); }
+input.active { outline:none; color:#0d5713; text-align:left; cursor:inherit; }
+
+md-input-container .md-errors-spacer { min-height:0px; }
+
 md-toast { position:fixed; }
-md-toast.md-center {
-	margin-left: auto;
-	margin-right: auto;
-	left: 50%;
-	right: auto;
-	transform: translateX(-50%);
-	padding: 0px;
+md-toast.md-center { margin-left: auto; margin-right: auto; left: 50%; 
+	right: auto; transform: translateX(-50%); padding: 0px; }
+
+md-chips-wrap { margin: 23px 0; }
+md-dialog { width:60%; white-space: pre; position:fixed; }
+.md-dialog-container { height: 100% !important; position: fixed !important; top: 0px !important; }
+md-dialog p { .preserve-lines; }
+
+@media screen and (max-width: 599px){ /* xs */
+    md-dialog { width:99%; }
 }
