+ SAL (reveal animation library) + animate.css

--- a/src/styles/style.helper.less
+++ b/src/styles/style.helper.less
@@ -3,6 +3,9 @@
 @import (reference) "lib/metro/utils.less";
 // @import (reference) "../configs/style.theme.part.less";
 
+// @import '../../node_modules/sal.js/dist/sal.css';
+// @import '../../node_modules/animate.css/animate.min.css';
+
 /* ------------------ ELEMENTS ------------------ */
 
 *.rtl { direction:rtl; }
