--- a/src/styles/style.helper.less
+++ b/src/styles/style.helper.less
@@ -210,7 +210,7 @@ img.no-resize { max-width:none; max-height:none; height: inherit; }
 .fg-transDark { color:rgba(0,0,0,0.4); }
 
 .spinner { .rotating; height:15px; ;width:15px; }
-.img-bg { position:relative; background-size:cover; background-position: center center; background-repeat:no-repeat; background-color:rgba(100,100,100,0.4); }
+.img-bg { position:relative; background-size:cover; background-position: center center; background-repeat:no-repeat; background-color:rgba(100,100,100,0.4); width:100%; height:100%; }
 
 .btn { border-radius:10px; font-size:17px; font-weight:900; text-transform: none; height:36px; }
 .btn-icon { width:40px; height:40px; border-radius:100%; background-color:rgba(0,0,0,0.6); position:relative; cursor:pointer; text-align: center; transition:opacity 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);  }
