--- a/src/styles/style.helper.less
+++ b/src/styles/style.helper.less
@@ -71,9 +71,9 @@ img.no-resize { max-width:none; max-height:none; height: inherit; }
 
 .right0 { right:0; }
 .left0 { left:0; }
-.hide { opacity:0; display: initial !important; }
-.hidden { height:0; overflow:hidden; }
-.remove { display:none;; }
+.hide { opacity:0 !important; display: initial !important; }
+.hidden { height:0 !important; overflow:hidden !important; }
+.remove { display:none !important; }
 .absolute { position:absolute; }
 .relative { position:relative; }
 .sticky { position:fixed; }
@@ -168,6 +168,7 @@ img.no-resize { max-width:none; max-height:none; height: inherit; }
 .spacer::after { content:''; }
 .center { text-align:center; }
 .centered { margin-left:auto; margin-right:auto; }
+.capitalize { text-transform: capitalize; }
 
 .text-border { text-shadow:0px 0px 3px rgba(0,0,0,0.7); }
 
@@ -176,6 +177,7 @@ img.no-resize { max-width:none; max-height:none; height: inherit; }
 .text-shadow(@distance:3px, @blur:8px) { text-shadow: 0px @distance @blur #C4C4C4; }
 
 .word-break { word-break:break-all; }
+.text-break { .word-break; }
 .text-center { text-align:center; }
 .text-middle { text-align:center; }
 .text-left { text-align:left; }
@@ -330,7 +332,6 @@ i[class^=icon]{font-style:normal !important; }
 .clearfix { zoom: 1; } /* IE < 8 */
 
 .preserve-lines { white-space:pre-wrap; };
-.capitalize { text-transform: capitalize; }
 
 // -----------
 
