--- a/src/styles/style.helper.less
+++ b/src/styles/style.helper.less
@@ -159,6 +159,7 @@ img.no-resize { max-width:none; max-height:none; height: inherit; }
 .padding-v { .padding40; padding-right:0; padding-left:0; }
 .padding-h { .padding40; padding-top:0; padding-bottom:0; }
 
+.italic { font-style: italic; }
 .underscore { text-decoration:underline; text-decoration-style: dashed; }
 .underline { text-decoration:underline; }
 .upper { text-transform:uppercase; }
