+ adding .padding-* styles

--- a/src/styles/style.helper.less
+++ b/src/styles/style.helper.less
@@ -159,6 +159,38 @@ img.no-resize { max-width:none; max-height:none; height: inherit; }
 .padding-v { .padding40; padding-right:0; padding-left:0; }
 .padding-h { .padding40; padding-top:0; padding-bottom:0; }
 
+.padding0 { padding:0 !important; }
+.padding-v0 { padding-top:0 !important; padding-bottom:0 !important; }
+.padding-h0 { padding-left:0 !important; padding-right:0 !important; }
+.padding-bottom0 { padding-bottom:0px !important; }
+.padding-bottom5 { padding-bottom:5px; }
+.padding-bottom10 { padding-bottom:10px; }
+.padding-bottom15 { padding-bottom:15px; }
+.padding-bottom20 { padding-bottom:20px; }
+.padding-bottom40 { padding-bottom:40px; }
+.padding-bottom60 { padding-bottom:60px; }
+.padding-top0 {  padding-top:0px !important; }
+.padding-top5 {  padding-top:5px; }
+.padding-top10 { padding-top:10px; }
+.padding-top15 { padding-top:15px; }
+.padding-top20 { padding-top:20px; }
+.padding-top40 { padding-top:40px; }
+.padding-top60 { padding-top:60px; }
+.padding-right0 {  padding-right:0px !important; }
+.padding-right5 {  padding-right:5px; }
+.padding-right10 { padding-right:10px; }
+.padding-right15 { padding-right:15px; }
+.padding-right20 { padding-right:20px; }
+.padding-right40 { padding-right:40px; }
+.padding-right60 { padding-right:60px; }
+.padding-left0 {  padding-left:0px !important; }
+.padding-left5 {  padding-left:5px; }
+.padding-left10 { padding-left:10px; }
+.padding-left15 { padding-left:15px; }
+.padding-left20 { padding-left:20px; }
+.padding-left40 { padding-left:40px; }
+.padding-left60 { padding-left:60px; }
+
 .italic { font-style: italic; }
 .underscore { text-decoration:underline; text-decoration-style: dashed; }
 .underline { text-decoration:underline; }
@@ -203,7 +235,7 @@ img.no-resize { max-width:none; max-height:none; height: inherit; }
 .inWork div { border:1px solid rgba(0,0,0,0.2); }
 
 .line { width:30%; height:1px; background-color:#eee; margin:20px 0; }
-.row { margin-top:20px; margin-bottom:20px; }
+.b-row { margin-top:20px; margin-bottom:20px; }
 
 .square { width: 100%; }
 .square:after { content: ""; display: block; padding-bottom: 100%; }
